@@ -21,8 +21,6 @@ import org.apache.parquet.hadoop.ParquetWriter;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
-import software.amazon.awssdk.services.sqs.model.Message;
-import software.amazon.awssdk.services.sqs.model.ReceiveMessageResponse;
 
 import sleeper.core.properties.PropertiesReloader;
 import sleeper.core.properties.instance.InstanceProperties;
@@ -46,9 +44,9 @@ import sleeper.core.tracker.ingest.job.InMemoryIngestJobTracker;
 import sleeper.core.tracker.ingest.job.IngestJobTracker;
 import sleeper.core.util.ObjectFactory;
 import sleeper.ingest.core.job.IngestJob;
-import sleeper.ingest.runner.testutils.RecordGenerator;
+import sleeper.ingest.runner.testutils.RowGenerator;
 import sleeper.localstack.test.LocalStackTestBase;
-import sleeper.parquet.record.ParquetRecordWriterFactory;
+import sleeper.parquet.row.ParquetRowWriterFactory;
 import sleeper.sketches.store.S3SketchesStore;
 import sleeper.sketches.store.SketchesStore;
 import sleeper.sketches.testutils.SketchesDeciles;
@@ -107,14 +105,14 @@ class IngestJobRunnerIT extends LocalStackTestBase {
     @Test
     void shouldIngestParquetFiles() throws Exception {
         // Given
-        RecordGenerator.RowListAndSchema rowListAndSchema = RecordGenerator.genericKey1D(
+        RowGenerator.RowListAndSchema rowListAndSchema = RowGenerator.genericKey1D(
                 new LongType(),
                 LongStream.range(-5, 5).boxed().collect(Collectors.toList()));
         tableProperties.setSchema(rowListAndSchema.sleeperSchema);
         StateStore stateStore = initialiseStateStore();
 
         List<String> files = writeParquetFilesForIngest(rowListAndSchema, 2);
-        List<Row> doubledRecords = Stream.of(rowListAndSchema.rowList, rowListAndSchema.rowList)
+        List<Row> doubledRows = Stream.of(rowListAndSchema.rowList, rowListAndSchema.rowList)
                 .flatMap(List::stream).collect(Collectors.toList());
 
         // When
@@ -128,7 +126,7 @@ class IngestJobRunnerIT extends LocalStackTestBase {
         assertThat(actualFiles)
                 .usingRecursiveFieldByFieldElementComparatorIgnoringFields("filename", "lastStateStoreUpdateTime")
                 .containsExactly(fileReferenceFactory.rootFile("anyfilename", 20));
-        assertThat(actualRows).containsExactlyInAnyOrderElementsOf(doubledRecords);
+        assertThat(actualRows).containsExactlyInAnyOrderElementsOf(doubledRows);
         assertThat(SketchesDeciles.fromFileReferences(rowListAndSchema.sleeperSchema, actualFiles, sketchesStore))
                 .isEqualTo(SketchesDeciles.from(rowListAndSchema.sleeperSchema, rowListAndSchema.rowList));
     }
@@ -136,7 +134,7 @@ class IngestJobRunnerIT extends LocalStackTestBase {
     @Test
     void shouldIgnoreFilesOfUnreadableFormats() throws Exception {
         // Given
-        RecordGenerator.RowListAndSchema rowListAndSchema = RecordGenerator.genericKey1D(
+        RowGenerator.RowListAndSchema rowListAndSchema = RowGenerator.genericKey1D(
                 new LongType(),
                 LongStream.range(-100, 100).boxed().collect(Collectors.toList()));
         tableProperties.setSchema(rowListAndSchema.sleeperSchema);
@@ -168,7 +166,7 @@ class IngestJobRunnerIT extends LocalStackTestBase {
     @Test
     void shouldIngestParquetFilesInNestedDirectories() throws Exception {
         // Given
-        RecordGenerator.RowListAndSchema rowListAndSchema = RecordGenerator.genericKey1D(
+        RowGenerator.RowListAndSchema rowListAndSchema = RowGenerator.genericKey1D(
                 new LongType(),
                 LongStream.range(-5, 5).boxed().collect(Collectors.toList()));
         tableProperties.setSchema(rowListAndSchema.sleeperSchema);
@@ -206,12 +204,12 @@ class IngestJobRunnerIT extends LocalStackTestBase {
     }
 
     @Test
-    void shouldWriteRecordsFromTwoBuckets() throws Exception {
+    void shouldWriteRowsFromTwoBuckets() throws Exception {
         // Given
-        RecordGenerator.RowListAndSchema rows1 = RecordGenerator.genericKey1D(
+        RowGenerator.RowListAndSchema rows1 = RowGenerator.genericKey1D(
                 new LongType(),
                 LongStream.range(-5, 5).boxed().collect(Collectors.toList()));
-        RecordGenerator.RowListAndSchema rows2 = RecordGenerator.genericKey1D(
+        RowGenerator.RowListAndSchema rows2 = RowGenerator.genericKey1D(
                 new LongType(),
                 LongStream.range(10, 20).boxed().collect(Collectors.toList()));
         tableProperties.setSchema(rows1.sleeperSchema);
@@ -253,7 +251,7 @@ class IngestJobRunnerIT extends LocalStackTestBase {
     @Test
     void shouldCommitFilesAsynchronously() throws Exception {
         // Given
-        RecordGenerator.RowListAndSchema rowListAndSchema = RecordGenerator.genericKey1D(
+        RowGenerator.RowListAndSchema rowListAndSchema = RowGenerator.genericKey1D(
                 new LongType(),
                 LongStream.range(-5, 5).boxed().collect(Collectors.toList()));
         tableProperties.setSchema(rowListAndSchema.sleeperSchema);
@@ -293,15 +291,10 @@ class IngestJobRunnerIT extends LocalStackTestBase {
     }
 
     private List<StateStoreCommitRequest> getCommitRequestsFromQueue(TableProperties tableProperties) {
-        String commitQueueUrl = instanceProperties.get(STATESTORE_COMMITTER_QUEUE_URL);
-        ReceiveMessageResponse response = sqsClient.receiveMessage(request -> request
-                .queueUrl(commitQueueUrl));
-
         StateStoreCommitRequestSerDe serDe = new StateStoreCommitRequestSerDe(tableProperties);
-        return response.messages().stream()
-                .map(Message::body)
+        return receiveMessages(instanceProperties.get(STATESTORE_COMMITTER_QUEUE_URL))
                 .map(serDe::fromJson)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<FileReference> getFilesAdded(List<StateStoreCommitRequest> commitRequests) {
@@ -351,20 +344,20 @@ class IngestJobRunnerIT extends LocalStackTestBase {
     }
 
     private List<String> writeParquetFilesForIngest(
-            RecordGenerator.RowListAndSchema rowListAndSchema,
+            RowGenerator.RowListAndSchema rowListAndSchema,
             int numberOfFiles) throws IOException {
         return writeParquetFilesForIngestWithRoot(rowListAndSchema, ingestSourceBucketName, numberOfFiles);
     }
 
     private List<String> writeParquetFilesForIngest(
-            RecordGenerator.RowListAndSchema rowListAndSchema,
+            RowGenerator.RowListAndSchema rowListAndSchema,
             String subDirectory,
             int numberOfFiles) throws IOException {
         return writeParquetFilesForIngestWithRoot(rowListAndSchema, ingestSourceBucketName + "/" + subDirectory, numberOfFiles);
     }
 
     private List<String> writeParquetFilesForIngestWithRoot(
-            RecordGenerator.RowListAndSchema rowListAndSchema,
+            RowGenerator.RowListAndSchema rowListAndSchema,
             String rootDirectory,
             int numberOfFiles) throws IOException {
         List<String> files = new ArrayList<>();
@@ -380,9 +373,9 @@ class IngestJobRunnerIT extends LocalStackTestBase {
     }
 
     private void writeParquetFileForIngest(
-            Path path, RecordGenerator.RowListAndSchema rowListAndSchema) throws IOException {
-        ParquetWriter<Row> writer = ParquetRecordWriterFactory
-                .createParquetRecordWriter(path, rowListAndSchema.sleeperSchema, hadoopConf);
+            Path path, RowGenerator.RowListAndSchema rowListAndSchema) throws IOException {
+        ParquetWriter<Row> writer = ParquetRowWriterFactory
+                .createParquetRowWriter(path, rowListAndSchema.sleeperSchema, hadoopConf);
         for (Row row : rowListAndSchema.rowList) {
             writer.write(row);
         }
